# MachineLearning

./: .gitignore  PLAN.md  README.md  pyproject.toml
experiments/: run_all.py
plots/: plot_activation_dist.py  plot_dead_neurons.py  plot_training_curves.py
src/activation_exp/: cli.py  configs.py  data.py  metrics.py  model.py  runner.py  trainer.py  utils.py
src/activation_exp/plotting/: activation_dist.py  dead_neurons.py  training_curves.py
tests/: test_metrics.py  test_model.py  test_trainer.py
